--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,7 @@
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
+
     {
       "src": "logo192.png",
       "type": "image/png",
@@ -16,6 +12,21 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "favicon.png",
+      "sizes": "16x16 32x32 24x24 16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "android-chrome-192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "android-chrome-384x384.png",
+      "type": "image/png",
+      "sizes": "384x384"
     }
   ],
   "start_url": ".",
