--- a/manifest.json
+++ b/manifest.json
@@ -4,28 +4,22 @@
     "icons": [
         {
             "src": "favicon.ico",
-            "sizes": "16x16 32x32",
-            "type": "image/png"
+            "sizes": "64x64 24x24 16x16 32x32",
+            "type": "png"
         },
         {
-            "src": "/android-chrome-192x192.png",
+            "src": "android-chrome-192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "png"
         },
         {
-            "src": "/android-chrome-384x384.png",
+            "src": "android-chrome-384x384.png",
             "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "display_override": [
-                "fullscreen",
-                "minimal-ui"
-            ],
-            "display": "standalone"
+            "type": "png"
         }
     ],
-    "start_url": ".",
+    "start_url": "./index.html",
     "theme_color": "#ffffff",
-    "background_color": "#ffffff"
+    "background_color": "#ffffff",
+    "display": "standalone"
 }
